@@ -1,3 +1,5 @@
+2007/12/10
+	Added PCA roadmap builder in the configuration panel
 2007/12/06
 	Added selections for kwsPlus steering methods.
 	Adding problems via the configuration Panel.
